evaluator/sources/2002372975.error
/eval-folder/2002372975.cpp: In function 'int main()':
/eval-folder/2002372975.cpp:6:1: error: expected ';' before '}' token
 }
 ^
